Mega menu border fix on small devices

--- a/assets/styles/mega_menu.scss
+++ b/assets/styles/mega_menu.scss
@@ -478,7 +478,7 @@
       li {
         .indicator {
           width: 60px;
-          height: 45px;
+          height: 42px;
           position: absolute;
           right: 0;
           top: 0;
@@ -488,7 +488,7 @@
           border-left: solid 1px #f0f0f0;
         }
         ul.dropdown li .indicator {
-          height: 38px;
+          height: 40px;
           right: 0;
           top: 0;
           font-size: 12px;
